--- a/src/app/features/auth/change-password/change-password.component.css
+++ b/src/app/features/auth/change-password/change-password.component.css
@@ -1,16 +1,18 @@
 * :host é uma forma de estilizar o próprio componente Angular */
 :host {
   font-family: 'Poppins', sans-serif;
+  display: block;
 }
 
-/* Container principal que centraliza tudo na tela */
-.recovery-container {
+.change-password-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; /* Ocupa a altura inteira da tela */
-  background-color: #f4f7f6; /* Um cinza bem claro para o fundo */
+  min-height: 100vh;
+  background-color: #f0f2f5;
+  padding: 20px;
 }
+
 
 /* O cartão branco flutuante */
 .recovery-card {
