--- a/src/app/features/auth/change-password/change-password.component.css
+++ b/src/app/features/auth/change-password/change-password.component.css
@@ -1,4 +1,4 @@
-* :host é uma forma de estilizar o próprio componente Angular */
+/* :host é uma forma de estilizar o próprio componente Angular */
 :host {
   font-family: 'Poppins', sans-serif;
   display: block;
