--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -11,7 +11,7 @@
           id="usernameOrEmail"
           name="usernameOrEmail"
           placeholder=""
-          [(ngModel)]="username" required >
+          [(ngModel)]="usernameOrEmail" required >
       </div>
 
       <div class="form-group">
